# nostal-emu

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LEGAL.md  README.md  ROMS.md
include/: cpu.h  ppu.h
src/: cpu.c  cpu.cpp  main.c  main.cpp  ppu.cpp
test/: cpu_test.cpp
